--- a/env.yml
+++ b/env.yml
@@ -1,6 +1,7 @@
 name: seq2seq
 channels:
 - conda-forge
+- pytorch
 dependencies:
 - python=3.12
 - torch
@@ -11,8 +12,5 @@ dependencies:
 - tokenizers
 - altair
 - tqdm
-- pandas
-- numpy
 - matplotlib
-- jupyter
 
