--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "openml>=0.15.1",
     "pmlb>=1.0.1.post3",
     "scipy>=1.16.3",
+    "seaborn>=0.13.2",
     "spyder-kernels>=3.1.2",
     "torch>=2.9.1",
 ]
