include pytest in pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "matplotlib>=3.10.7",
     "openml>=0.15.1",
     "pmlb>=1.0.1.post3",
+    "pytest>=9.0.2",
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
     "spyder-kernels>=3.1.2",
