--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bambi>=0.17.2",
     "datasets>=4.4.1",
     "joblib>=1.5.2",
     "matplotlib>=3.10.7",
