--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
     "spyder-kernels>=3.1.2",
+    "tabulate>=0.9.0",
     "tensorboard>=2.20.0",
     "torch>=2.9.1",
 ]
