--- a/metabeta/models/configs/toy.yaml
+++ b/metabeta/models/configs/toy.yaml
@@ -11,11 +11,14 @@ summarizer:
 posterior:
     type: 'coupling'
     transform: 'affine'
+    base_family: 'normal'
+    base_trainable: False
     n_blocks: 3
     subnet_kwargs:
         net_type: 'mlp'
-        activation: 'ELU'
+        activation: 'ReLU'
         d_ff: 64
         depth: 2
-        zero_init: False
-
+        dropout: 0.0
+        zero_init: True
+        use_bias: False
