--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "bambi>=0.17.2",
+    "blue>=0.9.1",
     "datasets>=4.4.1",
     "joblib>=1.5.2",
     "matplotlib>=3.10.7",
@@ -23,3 +24,18 @@ dependencies = [
 
 [tool.setuptools.packages.find]
 where = ["."]
+
+[tool.blue]
+line-length = 100
+target-version = ["py310"]
+include = '\.pyi?$'
+extend-exclude = '''
+(
+  ^metabeta/outputs/
+  | ^metabeta\.egg-info/
+  | ^\.venv/
+  | ^\.pytest_cache/
+  | ^\.ruff_cache/
+  | ^__pycache__/
+)
+'''
