--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bambi>=0.17.2",
     "blue>=0.9.1",
     "datasets>=4.4.1",
+    "ipykernel>=6.31.0",
     "joblib>=1.5.2",
     "matplotlib>=3.10.7",
     "openml>=0.15.1",
@@ -16,7 +17,6 @@ dependencies = [
     "schedulefree>=1.4.1",
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
-    "spyder-kernels>=3.1.2",
     "tabulate>=0.9.0",
     "tensorboard>=2.20.0",
     "torch>=2.9.1",
